crates/oxc_semantic/tests/integration/snapshots/integration__cfg__cfg_files@arrow_expressions.js-2.snap
---
source: crates/oxc_semantic/tests/integration/cfg.rs
expression: output.cfg_dot_diagram()
input_file: crates/oxc_semantic/tests/integration/cfg_fixtures/arrow_expressions.js
---
digraph {
    0 [ label = "statement\nstatement" ]
    1 [ label = "statement" ]
    2 [ label = "statement" ]
    0 -> 1 [ label = NewFunction ]
    0 -> 2 [ label = NewFunction ]
}
