crates/oxc_semantic/tests/integration/snapshots/integration__cfg__cfg_files@assignment_operators.js-2.snap
---
source: crates/oxc_semantic/tests/integration/cfg.rs
expression: output.cfg_dot_diagram()
input_file: crates/oxc_semantic/tests/integration/cfg_fixtures/assignment_operators.js
---
digraph {
    0 [ label = "statement" ]
    1 [ label = "" ]
    2 [ label = "statement" ]
    3 [ label = "" ]
    4 [ label = "statement" ]
    5 [ label = "" ]
    6 [ label = "statement\nstatement" ]
    0 -> 1 [ label = Normal ]
    0 -> 2 [ label = Normal ]
    1 -> 2 [ label = Normal ]
    2 -> 3 [ label = Normal ]
    2 -> 4 [ label = Normal ]
    3 -> 4 [ label = Normal ]
    4 -> 5 [ label = Normal ]
    4 -> 6 [ label = Normal ]
    5 -> 6 [ label = Normal ]
}
