crates/oxc_semantic/tests/integration/snapshots/integration__cfg__cfg_files@class.js-2.snap
---
source: crates/oxc_semantic/tests/integration/cfg.rs
expression: output.cfg_dot_diagram()
input_file: crates/oxc_semantic/tests/integration/cfg_fixtures/class.js
---
digraph {
    0 [ label = "" ]
    1 [ label = "" ]
    2 [ label = "" ]
    0 -> 1 [ label = NewFunction ]
    0 -> 2 [ label = Normal ]
}
