crates/oxc_semantic/tests/integration/snapshots/integration__cfg__cfg_files@cond_expr_in_arrow_fn.js-2.snap
---
source: crates/oxc_semantic/tests/integration/cfg.rs
expression: output.cfg_dot_diagram()
input_file: crates/oxc_semantic/tests/integration/cfg_fixtures/cond_expr_in_arrow_fn.js
---
digraph {
    0 [ label = "" ]
    1 [ label = "" ]
    2 [ label = "" ]
    3 [ label = "" ]
    4 [ label = "" ]
    0 -> 1 [ label = NewFunction ]
    2 -> 4 [ label = Normal ]
    1 -> 2 [ label = Normal ]
    1 -> 3 [ label = Normal ]
    3 -> 4 [ label = Normal ]
}
