crates/oxc_semantic/tests/integration/snapshots/integration__cfg__cfg_files@conditional_expression.js-2.snap
---
source: crates/oxc_semantic/tests/integration/cfg.rs
expression: output.cfg_dot_diagram()
input_file: crates/oxc_semantic/tests/integration/cfg_fixtures/conditional_expression.js
---
digraph {
    0 [ label = "" ]
    1 [ label = "" ]
    2 [ label = "" ]
    3 [ label = "" ]
    1 -> 3 [ label = Normal ]
    0 -> 1 [ label = Normal ]
    0 -> 2 [ label = Normal ]
    2 -> 3 [ label = Normal ]
}
