crates/oxc_semantic/tests/integration/snapshots/integration__cfg__cfg_files@do_while_break.js-2.snap
---
source: crates/oxc_semantic/tests/integration/cfg.rs
expression: output.cfg_dot_diagram()
input_file: crates/oxc_semantic/tests/integration/cfg_fixtures/do_while_break.js
---
digraph {
    0 [ label = ""]
    1 [ label = ""]
    2 [ label = ""]
    3 [ label = ""]
    4 [ label = ""]
    5 [ label = "Unreachable\nbreak"]
    6 [ label = ""]
    7 [ label = ""]
    8 [ label = "Unreachable"]
    9 [ label = ""]
    10 [ label = ""]
    11 [ label = "Unreachable\nbreak"]
    12 [ label = ""]
    13 [ label = ""]
    14 [ label = ""]
    15 [ label = ""]
    0 -> 1 [ ]
    1 -> 2 [ ]
    1 -> 3 [ ]
    2 -> 3 [ ]
    4 -> 5 [ ]
    4 -> 5 [ ]
    3 -> 6 [ ]
    4 -> 6 [ ]
    6 -> 7 [ ]
    6 -> 4 [ ]
    7 -> 8 [ ]
    2 -> 9 [ ]
    10 -> 11 [ ]
    10 -> 11 [ ]
    9 -> 12 [ ]
    10 -> 12 [ ]
    12 -> 13 [ ]
    12 -> 10 [ ]
    13 -> 14 [ ]
    0 -> 15 [ ]
}
