crates/oxc_semantic/tests/integration/snapshots/integration__cfg__cfg_files@for_in.js-2.snap
---
source: crates/oxc_semantic/tests/integration/cfg.rs
expression: output.cfg_dot_diagram()
input_file: crates/oxc_semantic/tests/integration/cfg_fixtures/for_in.js
---
digraph {
    0 [ label = "" ]
    1 [ label = "statement\nstatement" ]
    2 [ label = "" ]
    3 [ label = "" ]
    4 [ label = "statement" ]
    5 [ label = "statement" ]
    6 [ label = "" ]
    0 -> 1 [ label = NewFunction ]
    1 -> 2 [ label = Normal ]
    2 -> 4 [ label = Normal ]
    4 -> 3 [ label = Backedge ]
    3 -> 2 [ label = Backedge ]
    2 -> 5 [ label = Normal ]
    0 -> 6 [ label = Normal ]
}
